--- a/Cook_ut/src/app/register/register.component.html
+++ b/Cook_ut/src/app/register/register.component.html
@@ -58,7 +58,7 @@
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block"> Créer le compte  </button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Déjà un compte? <a href="">Enregistrez-vous</a> </p>                                                                 
+    <p class="text-center">Déjà un compte? <a [routerLink]="'/connection'">Enregistrez-vous</a> </p>                                                                 
 </form>
 </article>
 </div> <!-- card.// -->
