--- a/Cook_ut/src/app/navbar/navbar.component.html
+++ b/Cook_ut/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" [routerLink]="'header'">
           <img src="../../assets/img/Logo_Cookut_negatif.png" width="60" height="50" class="d-inline-block align-text-top">
         </a>
       </div>
