--- a/Cook_ut/src/app/services/services.component.html
+++ b/Cook_ut/src/app/services/services.component.html
@@ -5,7 +5,7 @@
       <h5 class="card-title">{{services.Titre}}</h5>
       <p class="card-text">{{services.Description}}</p>
       <p class="card-text"><small class="text-muted">Created by {{services.Auteur}} {{services.Date}}</small></p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary">Détails</a>
     </div>
   </div>
 </div>
