--- a/Cook_ut/src/app/navbar/navbar.component.html
+++ b/Cook_ut/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active">
-            <a class="nav-link" [routerLink]="'header'">Home</a>
+            <a class="nav-link" [routerLink]="''">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="'/find_services'">Trouver un service</a>
